--- a/Set-rack1.html
+++ b/Set-rack1.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+  <link rel="icon" type="image/png" href="logo.jpg">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -439,9 +439,10 @@
             <li>BREAKER COMSON AEC-649</li>
             <li>WSS SD-2400</li>
             <li>WSS SD-1460</li>
-            <li>MICROTECH MT-999A</li>
+            <li>MICROTECH MT-999E</li>
             <li>MARANI DPA260RTA+</li>
             <li>MIXER X-AIR12</li>
+            <li>แร็ค 10U</li>
           </ul>
         </div>
 
