--- a/Set-rack2.html
+++ b/Set-rack2.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+  <link rel="icon" type="image/png" href="logo.jpg">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -360,14 +360,14 @@
     
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="mainweb.html"><img
+          <a class="navbar-brand" href="index.html"><img
               src="logo.jpg" height="30" width="30"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <div class="navbar-nav">
-              <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+              <a class="nav-link" href="index.html">หน้าแรก</a>
               <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
               <div class="menu">
                 <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -407,7 +407,7 @@
 
       <nav aria-label="breadcrumb" style="margin: 20px;">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+          <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
           <li class="breadcrumb-item"><a href="เซ็ตแร็ค.html">เซ็ตแร็ค</a></li>
           <li class="breadcrumb-item active" aria-current="page">SET-RACK2</li>
         </ol>
@@ -434,12 +434,15 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
+            
             <li>WSS SD-2400</li>
             <li>WSS SD-1460</li>
             <li>MICROTECH MT-999E</li>
             <li>MARANI DPA260RTA+</li>
-            <li>MIXER X-AIR</li>
-            <li>BRAKER COMSON</li>
+            <li>MIXER X-AIR BEHRINGER X32 RACK</li>
+            <li>BRAKER COMSON AEC-64</li>
+            <li>แร็ค 10U</li>
+
           </ul>
         </div>
 
