--- a/Set-rack4.html
+++ b/Set-rack4.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+  <link rel="icon" type="image/png" href="logo.jpg">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -435,9 +435,10 @@
           <h3>สเปค</h3>
           <ul>
             <li>SD-1460</li>
-            <li>SD-2400</li>
-            <li>ปลั๊กโหลด3เฟส</li>
+            <li>SD-2400 -2pcs</li>
+            <li>ปลั๊กโหลด3เฟส WSS</li>
             <li>RACK 8U</li>
+            <li>แร็ค 8U</li>
           </ul>
         </div>
 
