--- a/Set-rack8.html
+++ b/Set-rack8.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+  <link rel="icon" type="image/png" href="logo.jpg">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -441,7 +441,7 @@
             <li>FA FIRST-AMP PRO D4XT</li>
             <li>FA FIRST-AMP PRO FB9D</li>
             <li>COMPACT M-10U</li>
-            <li>ปลํ๊กไฟ</li>
+            <li>ปลั๊กไฟ</li>
 
           </ul>
         </div>
