--- a/LoundSpeak-24.html
+++ b/LoundSpeak-24.html
@@ -130,6 +130,21 @@
     color: #0081f2;
   }
 
+
+  .none-product {
+      color: #626262;
+      font-size: 4rem;
+      text-align: center;
+      margin-top: 100px;
+    
+    }
+
+    .none-product img {
+      width: 60px;
+      height: auto;
+      margin-top: 10px;
+      margin-bottom: 400px;
+    }
   .product-grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -640,153 +655,14 @@
 
   <div class="container">
     <h2 class="text-center mb-4">ดอกลำโพง 24"</h2>
-    <section class="product-grid">
-      <!-- สินค้า  -->
-      <div class="product-card">
-        <a href="KANE-NEO12.html" class="product-link"><img src="loundspeaker/szl781-removebg-preview.png" height="50%" width="auto">
-          <div class="text-align">
-          <div class="product-name">KANE-NEO12</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">2400 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-        </div>
-      </div>
-    
-
-
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="STA-12B&C-Neodiem.html" class="product-link"><img src="loundspeaker/STA-12B_C-Neodiem-2-removebg-preview (1).png">
-          <div class="text-align">
-            <div class="product-name">STA-12B&C-NEO</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า </p>
-        <div class="price">8500 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="STA-LA12B&C-V2.html" class="product-link"><img src="loundspeaker/STA-LA12B_C-V2-2-removebg-preview-removebg-preview.png" >
-          <div class="text-align">
-          <div class="product-name">STA-LA12B&C-V2</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">8500 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="STA-15BM.html" class="product-link"><img src="loundspeaker/STA-15BM-1-removebg-preview.png" alt="">
-          <div class="text-align">
-          <div class="product-name">STA-15BM500</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">2400 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="PR-18_2200*40.html" class="product-link"><img src="loundspeaker/PR-18-1-removebg-preview.png" alt="" width="100%" height="auto">
-          <div class="text-align">
-          <div class="product-name">PR-18</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">2400 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="KANE-PRICK.html" class="product-link"><img src="loundspeaker/KANE-Prik-1-removebg-preview.png" alt="">
-          <div class="text-align">
-          <div class="product-name">KANE พริกขี้หนู</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">9999 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-
-
-
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="STA-Neo10.html" class="product-link"><img src="loundspeaker/STA-12B_C-neo-2-removebg-preview.png" alt="" >
-          <div class="text-align">
-            <div class="product-name">STA-NEO10</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">9999 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-
-
-
-      <!-- สินค้า -->
-      <div class="product-card">
-        <a href="STA-12Ev.html" class="product-link"><img src="loundspeaker/STA-12Ev-2-removebg-preview.png" alt="">
-          <div class="text-align">
-          <div class="product-name">STA-12EV(i)</div>
-        </a>
-        <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">9999 ฿</div>
-        <div class="product-footer">
-          <a href="https://facebook.com/weerapong.sound.system"><img
-              src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-          <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-        </div>
-      </div>
-      </div>
-
-
-
-
-
-
-
-
-
-  
-
-
-
-  </section>
+    <p class="none-product">สอบถามสั่งซื้อได้ที่</p>
+  <div class="none-product">
+    <a href="https://facebook.com/weerapong.sound.system"><img
+        src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
+    <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
   </div>
-
+  </div>
+  
   <!-- footer อย่ายุ่ง -->
   <footer class="footer">
     <div class="container">
