--- a/KANE-PRICK.html
+++ b/KANE-PRICK.html
@@ -421,10 +421,10 @@
       <div class="product-images">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="loundspeaker/KANE-Prik-1-removebg-preview.png" alt="สินค้า 1"></div>
-            <div class="swiper-slide"><img src="loundspeaker/KANE-Prik-2-removebg-preview.png" alt="สินค้า 2"></div>
-            <div class="swiper-slide"><img src="loundspeaker/KANE-Prik-3-removebg-preview.png" alt="สินค้า 2"></div>
-            <div class="swiper-slide"><img src="loundspeaker/KANE-Prik-4-removebg-preview.png" alt="สินค้า 2"></div>
+            <div class="swiper-slide"><img src="loundspeaker/S__61816840.jpg" alt="สินค้า 1"></div>
+            <div class="swiper-slide"><img src="loundspeaker/S__61816835_0-removebg-preview.png" alt="สินค้า 2"></div>
+            <div class="swiper-slide"><img src="loundspeaker/S__61816837_0-removebg-preview.png" alt="สินค้า 2"></div>
+            <div class="swiper-slide"><img src="loundspeaker/S__61816838_0-removebg-preview.png" alt="สินค้า 2"></div>
         </div>
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
